moved translation to ui js

--- a/static/Messages.properties
+++ b/static/Messages.properties
@@ -1,1 +1,12 @@
 noentries = No entries in the playlist
+refreshing = ...refreshing playlist...
+btn.audio.prev = Audio Prev
+btn.audio.next = Audio Next
+btn.sub.prev = Sub Prev
+btn.sub.next = Sub Prev
+btn.volume.up = Vol. Up
+btn.volume.down = Vol. Down
+btn.stop = Stop
+btn.next = Next
+tab.playlist = Playlist
+tab.search = Search
