--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -1,1 +1,12 @@
 noentries = No hay elementos en la lista de reproducción
+refreshing = ...recargando lista...
+btn.audio.prev = Audio Anterior
+btn.audio.next = Audio Siguiente
+btn.sub.prev = Sub Anterior
+btn.sub.next = Sub Siguiente
+btn.volume.up = Vol. Arriba
+btn.volume.down = Vol. Abajo
+btn.stop = Parar
+btn.next = Siguiente
+tab.playlist = Lista
+tab.search = Buscar
