translate btn attributes

--- a/static/Messages.properties
+++ b/static/Messages.properties
@@ -10,3 +10,29 @@ btn.stop = Stop
 btn.next = Next
 tab.playlist = Playlist
 tab.search = Search
+btn.settings = Settings
+engine.local = Search local
+engine.local-dir = Browse local
+engine.url = Paste Video URL
+engine.presets = Presets
+btn.page.next = Next page
+btn.page.prev = Prev. page
+btn.add.all.random = Random add all
+btn.add.all = Add all
+cfg.title = Settings
+cfg.history = Store loaded items in history:
+cfg.history.on = On
+cfg.history.off = Off
+cfg.history.clear.btn = Clear history
+cfg.results.number = Show # results
+cfg.quality = Video quality:
+cfg.quality.audio = Audio only
+cfg.quality.high = High quality
+cfg.quality.low = Low quality
+cfg.volume = Start Volume (dB):
+btn.close = Close
+btn.seek.back.long = seek back 10m
+btn.seek.back.short = seek back 30s
+btn.pause = Pause/Resume
+btn.seek.forward.long = seek forward 10m
+btn.seek.forward.short = seek forward 30s
