--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -10,3 +10,29 @@ btn.stop = Parar
 btn.next = Siguiente
 tab.playlist = Lista
 tab.search = Buscar
+btn.settings = Configuración
+engine.local = Buscar local
+engine.local-dir = Navegar local
+engine.url = Dirección
+engine.presets = Listas predefinidas
+btn.page.next = Página siguiente
+btn.page.prev = Página anterior
+btn.add.all.random = Añadir todo aleatoriamente
+btn.add.all = Añadir todo
+cfg.title = Configuración
+cfg.history = Guardar elementos en el historial:
+cfg.history.on = Activado
+cfg.history.off = Desactivado
+cfg.history.clear.btn = Limpiar historial
+cfg.results.number = Número de elementos a mostrar
+cfg.quality = Calidad del video:
+cfg.quality.audio = Sólo sonido
+cfg.quality.high = Alta calidad
+cfg.quality.low = Baja calidad
+cfg.volume = Volumen inicial (dB):
+btn.close = Cerrar
+btn.seek.back.long = Mover atrás 10m
+btn.seek.back.short = Mover atrás 30s
+btn.pause = Pausa/Continuar
+btn.seek.forward.long = Mover adelante 10m
+btn.seek.forward.short = Mover adelante 30s
