--- a/static/Messages.properties
+++ b/static/Messages.properties
@@ -36,3 +36,9 @@ btn.seek.back.short = seek back 30s
 btn.pause = Pause/Resume
 btn.seek.forward.long = seek forward 10m
 btn.seek.forward.short = seek forward 30s
+notification.load.video.queued = Video queued
+notification.load.video.error = Error loading video
+notification.load.videos.error = Error loading videos
+notification.volume.updated = Updated volume
+notification.ok = Operation requested
+notification.seeked = Changed video time
