--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -36,3 +36,9 @@ btn.seek.back.short = Mover atrás 30s
 btn.pause = Pausa/Continuar
 btn.seek.forward.long = Mover adelante 10m
 btn.seek.forward.short = Mover adelante 30s
+notification.load.video.queued = Video añadido a la cola
+notification.load.video.error = Error cargando video
+notification.load.videos.error = Error cargando videos
+notification.volume.updated = Volumen actualizado
+notification.ok = Solicitud recibida
+notification.seeked = Posición en video actualizada
