--- a/static/Messages.properties
+++ b/static/Messages.properties
@@ -1,5 +1,9 @@
 noentries = No entries in the playlist
 refreshing = ...refreshing playlist...
+comingsoon = Coming soon
+search.empty = No se encontraron resultados
+search.home.title = Home
+search.home.description = Back to home
 btn.audio.prev = Audio Prev
 btn.audio.next = Audio Next
 btn.sub.prev = Sub Prev
@@ -42,3 +46,4 @@ notification.load.videos.error = Error loading videos
 notification.volume.updated = Updated volume
 notification.ok = Operation requested
 notification.seeked = Changed video time
+btn.related = Search related
