--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -1,5 +1,9 @@
 noentries = No hay elementos en la lista de reproducción
 refreshing = ...recargando lista...
+comingsoon = En breve
+search.empty = No results found
+search.home.title = Inicio
+search.home.description = Volver al inicio
 btn.audio.prev = Audio Anterior
 btn.audio.next = Audio Siguiente
 btn.sub.prev = Sub Anterior
@@ -42,3 +46,4 @@ notification.load.videos.error = Error cargando videos
 notification.volume.updated = Volumen actualizado
 notification.ok = Solicitud recibida
 notification.seeked = Posición en video actualizada
+btn.related = Buscar relacionados
