--- a/static/Messages.properties
+++ b/static/Messages.properties
@@ -1,9 +1,16 @@
 noentries = No entries in the playlist
 refreshing = ...refreshing playlist...
 comingsoon = Coming soon
+video.loading = Loading data for
 search.empty = No se encontraron resultados
 search.home.title = Home
 search.home.description = Back to home
+search.history.search.title = Search History
+search.history.search.description = Recent searches
+search.history.search.item.description = Searched in
+search.history.title = History
+search.history.description = Recently played items
+btn.download = Download
 btn.audio.prev = Audio Prev
 btn.audio.next = Audio Next
 btn.sub.prev = Sub Prev
@@ -44,6 +51,7 @@ notification.load.video.queued = Video queued
 notification.load.video.error = Error loading video
 notification.load.videos.error = Error loading videos
 notification.volume.updated = Updated volume
+notification.download.ok = Video downloaded
 notification.ok = Operation requested
 notification.seeked = Changed video time
 btn.related = Search related
