--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -1,9 +1,16 @@
 noentries = No hay elementos en la lista de reproducción
 refreshing = ...recargando lista...
 comingsoon = En breve
+video.loading = Cargando datos para
 search.empty = No results found
 search.home.title = Inicio
 search.home.description = Volver al inicio
+search.history.search.title = Historial de búsquedas
+search.history.search.description = Búsquedas recientes
+search.history.search.item.description = Buscado en
+search.history.title = Historial
+search.history.description = Elementos reproducidos recientemente
+btn.download = Descargar
 btn.audio.prev = Audio Anterior
 btn.audio.next = Audio Siguiente
 btn.sub.prev = Sub Anterior
@@ -44,6 +51,7 @@ notification.load.video.queued = Video añadido a la cola
 notification.load.video.error = Error cargando video
 notification.load.videos.error = Error cargando videos
 notification.volume.updated = Volumen actualizado
+notification.download.ok = Video descargado correctamente
 notification.ok = Solicitud recibida
 notification.seeked = Posición en video actualizada
 btn.related = Buscar relacionados
