--- a/static/Messages.properties
+++ b/static/Messages.properties
@@ -1,6 +1,7 @@
-noentries = No entries in the playlist
-refreshing = ...refreshing playlist...
-comingsoon = Coming soon
+playlist.empty = No entries in the playlist
+playlist.refreshing = ...refreshing playlist...
+playlist.now = Now Playing
+playlist.soon = Coming soon
 video.loading = Loading data for
 search.empty = No se encontraron resultados
 search.home.title = Home
