--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -1,6 +1,7 @@
-noentries = No hay elementos en la lista de reproducción
-refreshing = ...recargando lista...
-comingsoon = En breve
+playlist.empty = No hay elementos en la lista de reproducción
+playlist.refreshing = ...recargando lista...
+playlist.now = Ahora
+playlist.soon = En breve
 video.loading = Cargando datos para
 search.empty = No results found
 search.home.title = Inicio
