--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -1,16 +1,16 @@
-playlist.empty = No hay elementos en la lista de reproducción
+playlist.empty = Sin elementos
 playlist.refreshing = ...recargando lista...
 playlist.now = Ahora
 playlist.soon = En breve
 video.loading = Cargando datos para
-search.empty = No results found
+search.empty = No se encontraron resultados
 search.home.title = Inicio
 search.home.description = Volver al inicio
 search.history.search.title = Historial de búsquedas
 search.history.search.description = Búsquedas recientes
 search.history.search.item.description = Buscado en
 search.history.title = Historial
-search.history.description = Elementos reproducidos recientemente
+search.history.description = Reproducciones recientes
 btn.download = Descargar
 btn.audio.prev = Audio Anterior
 btn.audio.next = Audio Siguiente
@@ -32,11 +32,11 @@ btn.page.prev = Página anterior
 btn.add.all.random = Añadir todo aleatoriamente
 btn.add.all = Añadir todo
 cfg.title = Configuración
-cfg.history = Guardar elementos en el historial:
+cfg.history = Guardar en el historial:
 cfg.history.on = Activado
 cfg.history.off = Desactivado
 cfg.history.clear.btn = Limpiar historial
-cfg.results.number = Número de elementos a mostrar
+cfg.results.number = Elementos a mostrar
 cfg.quality = Calidad del video:
 cfg.quality.audio = Sólo sonido
 cfg.quality.high = Alta calidad
@@ -48,11 +48,11 @@ btn.seek.back.short = Mover atrás 30s
 btn.pause = Pausa/Continuar
 btn.seek.forward.long = Mover adelante 10m
 btn.seek.forward.short = Mover adelante 30s
-notification.load.video.queued = Video añadido a la cola
+notification.load.video.queued = Video añadido
 notification.load.video.error = Error cargando video
 notification.load.videos.error = Error cargando videos
 notification.volume.updated = Volumen actualizado
-notification.download.ok = Video descargado correctamente
+notification.download.ok = Descargado correctamente
 notification.ok = Solicitud recibida
-notification.seeked = Posición en video actualizada
+notification.seeked = Posición actualizada
 btn.related = Buscar relacionados
