--- a/static/Messages_es.properties
+++ b/static/Messages_es.properties
@@ -33,8 +33,8 @@ btn.add.all.random = Añadir todo aleatoriamente
 btn.add.all = Añadir todo
 cfg.title = Configuración
 cfg.history = Guardar en el historial:
-cfg.history.on = Activado
-cfg.history.off = Desactivado
+cfg.history.on = Si
+cfg.history.off = No
 cfg.history.clear.btn = Limpiar historial
 cfg.results.number = Elementos a mostrar
 cfg.quality = Calidad del video:
